--- a/client/src/components/SignupPageComp/SignUpPage.module.css
+++ b/client/src/components/SignupPageComp/SignUpPage.module.css
@@ -23,13 +23,9 @@
 }
 
 .logoBox {
-  background: #8b1c32;
-  color: white;
-  font-weight: bold;
-  border-radius: 8px;
-  padding: 0.5rem 1rem;
-  margin: 0 auto 1.5rem;
-  width: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .title {
@@ -82,4 +78,9 @@
   color: #8b1c32;
   font-weight: 600;
   text-decoration: none;
+}
+
+.logo {
+  width: 90px;
+  height: auto;
 }
