--- a/client/src/components/Dashboard/DashboardHeader.module.css
+++ b/client/src/components/Dashboard/DashboardHeader.module.css
@@ -5,11 +5,13 @@
 .title {
   font-size: 3rem;
   font-weight: 700;
-  color: #555; /* maroon */
+  color: #800000;
   margin-top: -20px;
 }
 
 .subtitle {
   font-size: 1.5rem;
   color: #555;
+  border-bottom: 2px solid #800000;
+  padding-bottom: 3rem;
 }
