--- a/client/src/pages/profile.module.css
+++ b/client/src/pages/profile.module.css
@@ -1,8 +1,8 @@
 .container {
-  padding: 2rem;
+  padding: 2rem 2rem;
   min-height: 100vh;
-  width: 100%;
-  background: #f9f9f9;
+  width: 93%;
+  background: #ffffff;
 }
 
 .header {
@@ -33,7 +33,7 @@
 .title {
   font-size: 2rem;
   font-weight: 700;
-  color: #4a1c1c;
+  color: #800020;
 }
 
 .subtitle {
@@ -93,7 +93,7 @@
   font-size: 1.3rem;
   font-weight: 600;
   margin-bottom: 1rem;
-  color: #4a1c1c;
+  color: #800020;
 }
 
 .personalGrid {
